--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,40 +1,44 @@
 {
 	"root": true,
+	"parser": "@typescript-eslint/parser",
 	"env": {
 		"browser": true,
 		"es2021": true,
 		"node": true
 	},
-	"extends": [
-		"eslint:recommended",
-		"plugin:@typescript-eslint/recommended"
-	],
-	"overrides": [
-	],
-	"parser": "@typescript-eslint/parser",
 	"parserOptions": {
 		"ecmaVersion": "latest",
-		"sourceType": "module"
+		"sourceType": "module",
+		"project": ["./packages/backend/tsconfig.json", "./packages/frontend/tsconfig.json"]
 	},
+	"extends": [
+		"eslint:recommended",
+		"airbnb",
+		"airbnb-typescript",
+		"airbnb/hooks",
+		"prettier",
+		"plugin:@typescript-eslint/recommended",
+		"plugin:@typescript-eslint/recommended-requiring-type-checking",
+		"plugin:prettier/recommended"
+	],
 	"plugins": [
-		"@typescript-eslint"
+		"@typescript-eslint",
+		"react-hooks",
+		"prettier",
+		"no-function-declare-after-return",
+		"no-for-of-loops"
 	],
 	"rules": {
-		"indent": [
-			"error",
-			"tab"
+		"prettier/prettier": [
+			"error", {
+				"semi": false,
+				"endOfLine": "auto",
+				"trailingComma": "all",
+				"printWidth": 80
+			}
 		],
-		"linebreak-style": [
-			"error",
-			"unix"
-		],
-		"quotes": [
-			"error",
-			"double"
-		],
-		"semi": [
-			"error",
-			"always"
-		]
+		"react/react-in-jsx-scope": "off",
+		"react/button-has-type": "off",
+		"@typescript-eslint/no-shadow": "off"
 	}
 }
