--- a/packages/frontend/tsconfig.json
+++ b/packages/frontend/tsconfig.json
@@ -17,5 +17,6 @@
     "jsx": "react-jsx"
   },
   "include": ["src"],
+  "typeRoots": ["./src/globalTypes.d.ts"],
   "references": [{ "path": "./tsconfig.node.json" }]
 }
